Feature: Filtro tela restaurante.

--- a/src/ForkFinder/Views/Restaurantes/Index.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@model IEnumerable<Restaurante>
+﻿@model List<ForkFinder.Models.Restaurante>
+
 @{
-    ViewData["Title"] = "List of Restaurantes";
+    ViewData["Title"] = "Restaurantes";
+    var especialidades = ViewBag.Especialidades as List<ForkFinder.Models.Especialidade>;
+    var horarios = ViewBag.Horarios as List<ForkFinder.Models.Horario>;
 }
 
+<h1>Restaurantes</h1>
 <div>
     <div class="row">
         <div class="col-4 justify-content-start">
@@ -15,55 +19,150 @@
     <hr />
     <div>
         <div class="container text-center my-2">
-            <form asp-controller="Restaurantes" asp-action="Index" method="get">
+            <form method="get" asp-action="Index">
                 <div class="row justify-content-center">
-                    <div class="form-group col-md-3">
-                        <label for="especialidade">Especialidade</label>
-                        <select id="especialidades" name="especialidade" class="form-control">
-                            <option value="">Todas</option>
-                            @foreach (var especialidade in (IEnumerable<ForkFinder.Models.Especialidade>)((dynamic)ViewBag.Context).Especialidades)
-                            {
-                                <option value="@especialidade.Id">@especialidade.NomeEspecialidade</option>
-                            }
-                        </select>
-                    </div>
-
-                    <div class="form-group col-md-3">
-                        <label for="horario">Horário</label>
-                        <select id="horario" name="disponibilidade" class="form-control">
-                            <option value="">Qualquer</option>
-                            @foreach (var horario in (IEnumerable<ForkFinder.Models.Horario>)((dynamic)ViewBag.Context).Horarios)
-                            {
-                                <option value="@horario.Id">@horario.Hora</option>
-                            }
-                        </select>
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="acessibilidade">Acessibilidade</label>
-                        <select id="acessibilidade" name="acessibilidade" class="form-control">
-                            <option value="">Todas</option>
-                            <option value="True">Sim</option>
-                            <option value="False">Não</option>
-                        </select>
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="avaliacao">Avaliação</label>
-                        <select id="avaliacao" name="avaliacao" class="form-control">
-                            <option value="">Todas</option>
-                            <option value="1">1 estrela</option>
-                            <option value="2">2 estrelas</option>
-                            <option value="3">3 estrelas</option>
-                            <option value="4">4 estrelas</option>
-                            <option value="5">5 estrelas</option>
-                        </select>
-                    </div>
-                    <div class="form-group d-flex justify-content-end">
-                        <button type="submit" class="btn btn-primary">Buscar</button>
-                    </div>
+                <div class="form-group col-md-3">
+        <label for="especialidade">Especialidade:</label>
+        <select id="especialidades" name="especialidade" class="form-control">
+            <option value="">Todas</option>
+            @foreach (var especialidade in @especialidades)
+            {
+                <option value="@especialidade.NomeEspecialidade">@especialidade.NomeEspecialidade</option>
+            }
+        </select>
+    </div>
+                <div class="form-group col-md-3">
+        <label for="disponibilidade">Disponibilidade:</label>
+        <select id="disponibilidade" name="disponibilidade" class="form-control">
+            <option value="">Qualquer horário</option>
+            @foreach (var horario in horarios)
+            {
+                <option value="@horario.Id">@horario.Hora</option>
+            }
+        </select>
+    </div>
+                <div class="form-group col-md-3">
+        <label for="acessibilidade">Acessibilidade:</label>
+        <select id="acessibilidade" name="acessibilidade" class="form-control">
+            <option value="">Qualquer</option>
+            <option value="true">Sim</option>
+            <option value="false">Não</option>
+        </select>
+    </div>
+                <div class="form-group col-md-3">
+        <label for="avaliacao">Avaliação:</label>
+        <select id="avaliacao" name="avaliacao" class="form-control">
+            <option value="">Qualquer avaliação</option>
+            <option value="1">1 estrela ou mais</option>
+            <option value="2">2 estrelas ou mais</option>
+            <option value="3">3 estrelas ou mais</option>
+            <option value="4">4 estrelas ou mais</option>
+            <option value="5">5 estrelas</option>
+        </select>
+    </div>
                 </div>
-            </form>
+                <div class="form-group d-flex justify-content-end py-2">
+                    <button type="submit" class="btn btn-primary">Buscar</button>
+                </div>
+</form>
+            </div>
+        </div>
+<hr />
+
+@if (Model.Count > 0)
+{
+    <div class="container">
+        <div class="row align-items-center justify-content-start">
+            @foreach (var restaurante in Model)
+            {
+                <div class="col-4 m-0">
+                    <a asp-controller="Restaurantes" asp-action="Restaurante" asp-route-id="@restaurante.RestauranteId">
+                        <div class="row align-items-center justify-content-start py-3">
+                            <div class="col-3">
+                                <div>
+                                    @if (restaurante.FotoPerfil != null)
+                                    {
+                                        var base64String = Convert.ToBase64String(restaurante.FotoPerfil);
+                                        var imgSrc = string.Format("data:image/jpeg;base64,{0}", base64String);
+                                        <img class="rounded-circle" src="@imgSrc" style="max-width:100px; min-height:100px;" />
+                                    }
+                                    else
+                                    {
+                                        <span>Nenhuma imagem disponível</span>
+                                    }
+                                </div>
+                            </div>
+                            <div class="col-9">
+                                <div class="row align-items-center m-0">
+                                    <div class="col text-decoration-none">
+                                        <div class="row m-0">
+                                            <p class="px-2 m-0">@Html.DisplayFor(modelItem => restaurante.Nome)</p>
+                                        </div>
+                                        <div class="row m-0">
+                                            <div class="col-7 p-1">
+                                                @if (restaurante.Avaliacoes.Count > 0)
+                                                {
+                                                    double mediaAvaliacoes = restaurante.Avaliacoes.Average(a => a.Estrela);
+                                                    int quantidadeEstrelas = (int)Math.Round(mediaAvaliacoes);
+
+                                                    <div class="row">
+                                                        <p>
+                                                            @for (int i = 0; i < 5; i++)
+                                                            {
+                                                                if (i < quantidadeEstrelas)
+                                                                {
+                                                                    <i class="bi bi-star-fill text-warning"></i>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <i class="bi bi-star text-warning"></i>
+                                                                }
+                                                            }
+                                                        </p>
+                                                    </div>
+                                                }
+                                                else
+                                                {
+                                                    <p class="p-0 m-1 text-info">Sem avaliações</p>
+                                                }
+                                            </div>
+                                            <div class="col-5">
+                                                @if (restaurante.Especialidades_Restaurantes.Count > 0)
+                                                {
+                                                    var especialidadeRestaurante = restaurante.Especialidades_Restaurantes[0];
+                                                    <p class="py-2 m-0">@especialidadeRestaurante.Especialidade?.NomeEspecialidade</p>
+                                                }
+                                                else
+                                                {
+                                                    <p class="py-2 m-0">Sem especialidade</p>
+                                                }
+                                            </div>
+                                        </div>
+                                        <div class="row m-0">
+                                            <p class="px-2 m-0">
+                                                @Html.DisplayFor(modelItem => restaurante.Endereco.Cidade),
+                                                @Html.DisplayFor(modelItem => restaurante.Endereco.Bairro),
+                                                @Html.DisplayFor(modelItem => restaurante.Endereco.Numero)
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            }
         </div>
     </div>
+
+}
+else
+{
+    <p>Nenhum restaurante encontrado.</p>
+}
+</div>
+@*
+
     <div class="container">
         <div class="row align-items-center justify-content-start">
             @foreach (var restaurante in Model)
@@ -148,3 +247,4 @@
         </div>
     </div>
 </div>
+*@
